padding left and right applied to <em> element to give it some spacing from other letters and edge. padding reduced for summary.p-title so ensure name fits on same line as summary marker

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,11 @@ ul li {
     font-family: 'Raleway', sans-serif;
 }
 
+em {
+    padding-left: 1rem;
+    padding-right: 2rem;
+}
+
 .icon {
     letter-spacing: 1rem;
 }
@@ -504,7 +509,7 @@ footer a {
     }
 
     summary.p-title {
-        padding-left: 5%;
+        padding-left: 1%;
     }
 
 
